# bank-api-python

./: .env  .gitignore  README.md  banco_sistema.db  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py
migrations/versions/13 - APIs Assíncronas com FastAPI/desafio/migrations/versions/: 09f7da264602_add_initial_tables.py
src/: config.py  security.py
src/controllers/: account.py  transaction.py
src/models/: account.py
src/schemas/: account.py  transaction.py
src/services/: transaction.py
