[tool.poetry]
package-mode = false
name = "bank-api-python"
version = "0.1.0"
description = "Sistema bancário assíncrono com FastAPI"
authors = ["Karla Renata <karlarenata692@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
databases = "^0.9.0"
asyncpg = "^0.29.0"
pydantic = "^2.0"
python-dotenv = "^1.0.0"
pyjwt = "^2.8.0"
alembic = "^1.13.0"
pydantic-settings = "^2.13.1"
aiosqlite = "^0.22.1"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
isort = "^5.13.0"
pytest = "^8.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
pytest-mock = "^3.12.0"

[tool.pytest.init_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"